hphp/hack/test/typecheck/namespace_empty_identifier.php.exp
File "namespace_empty_identifier.php", line 4, characters 7-8:
Unbound global function: `` is not a valid name for fun() (Naming[2105])
File "namespace_empty_identifier.php", line 4, characters 7-8:
Unbound name: `` (a global function) (Naming[2049])
File "namespace_empty_identifier.php", line 3, characters 10-13:
Was expecting a return type hint (Typing[4030])
File "namespace_empty_identifier.php", line 3, characters 15-16:
Was expecting a type hint (Typing[4032])
File "namespace_empty_identifier.php", line 4, characters 7-8:
Unbound name (typing): `` (Typing[4107])
